--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@react-three/rapier": "^1.5.0",
     "@types/three": "^0.168.0",
     "@vercel/analytics": "^1.4.1",
-    "gsap": "npm:@gsap/shockingly@^3.12.5",
+    "gsap": "^3.12.7",
+    "gsap-trial": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
